force-app/main/default/objects/National_Outings_Trip_Budget_Item__c/National_Outings_Trip_Budget_Item__c.object-meta.xml
<CustomObject>
    <label>National Outings Trip Budget Item</label>
    <nameField>
        <displayFormat>TI-{00000000}</displayFormat>
        <label>National Outings Trip Budget Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>National Outings Trip Budget Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>