force-app/main/default/objects/National_Outings_Trip_Budget_Item__c/fields/Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category__c</fullName>
    <label>Budget Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Volunteer Travel</fullName>
            </value>
            <value>
                <fullName>Concessionaires</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>