force-app/main/default/objects/National_Outings_Trip_Budget_Item__c/fields/Factor_Type__c.field-meta.xml
<CustomField>
    <fullName>Factor_Type__c</fullName>
    <label>Factor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dollars</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>