force-app/main/default/objects/National_Outings_Trip_Budget_Item__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>