force-app/main/default/objects/National_Outings_Trip_Budget_Item__c/fields/National_Outings_Trip__c.field-meta.xml
<CustomField>
    <fullName>National_Outings_Trip__c</fullName>
    <label>National Outings Trip</label>
    <referenceTo>National_Outings_Trip__c</referenceTo>
    <relationshipLabel>National Outings Trip Budget Items</relationshipLabel>
    <relationshipName>National_Outings_Trip_Budget_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>