force-app/main/default/objects/National_Outings_Trip_Budget_Item__c/fields/Number_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_Participants__c</fullName>
    <label>Number Participants</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>