force-app/main/default/objects/National_Outings_Trip_Budget_Item__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trip</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Participants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>