force-app/main/default/objects/National_Outings_Trip_Budget_Item__c/fields/Participant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Participant_Amount__c</fullName>
    <label>Participant Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>