force-app/main/default/objects/National_Outings_Trip_Budget_Item__c/fields/Staff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Staff_Amount__c</fullName>
    <label>Staff Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>