force-app/main/default/objects/National_Outings_Trip_Budget_Item__c/fields/Staff_Role__c.field-meta.xml
<CustomField>
    <fullName>Staff_Role__c</fullName>
    <label>Staff Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>